fix: The webservlet copy to clipboard works for multiple